--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "glslify-bundle": "^5.1.1",
+        "glslify-deps": "^1.3.1",
         "parcel": "^1.12.4",
         "prettier": "^2.0.2",
         "sass": "^1.26.3"
@@ -19,6 +21,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "bulma": "^0.8.1",
-        "regl": "^1.4.2"
+        "regl": "^1.4.2",
+        "zenscroll": "^4.0.2"
     }
 }
