make the site look better

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
+        "aos": "^2.3.4",
         "bulma": "^0.8.1",
         "html2canvas": "^1.0.0-rc.5",
         "regl": "^1.4.2",
-        "scrollreveal": "^4.0.6",
         "zenscroll": "^4.0.2"
     }
 }
