--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Dependency directories
 node_modules/
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache/
+.parcel-cache/
 dist/
-
