--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "CM-Tech.github.io",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "parcel index.html",
-        "build": "parcel build index.html",
-        "fmt": "prettier --write {js,sass}/* --print-width 150"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "glslify-bundle": "^5.1.1",
-        "glslify-deps": "^1.3.1",
-        "parcel": "^1.12.4",
-        "prettier": "^2.0.2",
-        "sass": "^1.26.3"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.13.0",
-        "aos": "^2.3.4",
-        "bulma": "^0.8.1",
-        "dom-to-image": "^2.6.0",
-        "html2canvas": "^1.0.0-rc.5",
-        "regl": "^1.4.2",
-        "zenscroll": "^4.0.2"
-    }
+  "name": "cm-tech-website",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "format": "prettier --write ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@parcel/transformer-glsl": "^2.2.1",
+    "@parcel/transformer-sass": "^2.2.1",
+    "@types/aos": "^3.0.4",
+    "parcel": "^2.2.1",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.0",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "aos": "^2.3.4",
+    "bulma": "^0.9.3",
+    "regl": "^2.1.0",
+    "zenscroll": "^4.0.2"
+  }
 }
