--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,21 +8,22 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        node-version: [18.x]
-
+        node-version: [20]
     steps:
     - uses: actions/checkout@v4
-
+    - name: Install pnpm
+      uses: pnpm/action-setup@v3
+      with:
+        version: 9
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-
+        cache: 'pnpm'
+    - name: Install dependencies
+      run: pnpm install
     - name: Build
-      run: |
-        npm install
-        npm run build
+      run: pnpm run build
