--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cm-tech-website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -12,19 +12,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-glsl": "^2.2.1",
-    "@parcel/transformer-sass": "^2.2.1",
-    "@types/aos": "^3.0.4",
-    "parcel": "^2.2.1",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.0",
-    "typescript": "^4.5.5"
+    "@parcel/transformer-glsl": "^2.12.0",
+    "@parcel/transformer-sass": "^2.12.0",
+    "@types/aos": "^3.0.7",
+    "lru-cache": "^10.2.2",
+    "parcel": "^2.12.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "aos": "^2.3.4",
-    "bulma": "^0.9.3",
+    "bulma": "^1.0.1",
     "regl": "^2.1.0",
     "zenscroll": "^4.0.2"
-  }
+  },
+  "packageManager": "pnpm@9.1.0"
 }
